[package]
name = "solana-pool-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.8.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }